# PolygonChart

./: CMakeLists.txt  README.md
.github/workflows/: build.yml
android/: AndroidManifest.xml
qml/: main.qml
src/: RadarChartModel.cpp  RadarChartModel.h  RadarChartRenderer.cpp  RadarChartRenderer.h  main.cpp
